@@ -18,7 +18,7 @@ libnetclient_a = static_library('netclient', libnetclient_a_sources,
                                 dependencies : libnetclient_deps + [libbetclient_compile_dep],
                                 install      : false)
 
-if with_libnetclient_docs
+if libnetclient_docs
   doxygen = doxygen_program.path()
   dox_path = join_paths(meson.source_root(), meson.current_source_dir(), 'libnetclient.dox')
   run_command(doxygen, dox_path)
